--- a/index.html
+++ b/index.html
@@ -17,22 +17,30 @@
 </head>
 <body>
 <main>
+<div>
   <h1>Learn to code by watching others</h1>
 
   <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
   but understanding how developers think is invaluable.</p>
-
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
-  
+</div>
+<div>
+ <p> Try it free 7 days then $20/mo. thereafter </p>
+<form id="form">
+  <label for="first">First</label>
+  <input id="first" class="inputs" name="SignupForm"> <!--1-->
+  <p class="error">First Name cannot be empty.</p>
+  <label for="last">Last Name</label>
+  <input id="last" class="inputs" name="SignupForm"> <!--2-->
+  <p class="error">Last Name cannot be empty.</p> 
+  <label for="email">Email Address</label>
+  <input id="email" class="inputs" name="SignupForm"> <!--3-->
+  <label for="password">Password</label>
+  <p class="error">Password cannot be empty.</p>
+  <input id="password" class="inputs" name="SignupForm"> <!--4-->
+  <p class="error">Looks like this is not an email.</p>
+  <button type="submit" id="submit">Claim your free trial</button>
+  <span>By clicking the button, you are agreeing to our <a href="#">Terms and Services</a></span></form>
+  </div>
   <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
