--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <title>Frontend Mentor | Intro component with sign up form</title>
   <link rel="stylesheet" href="styles.css">
   <script src="scripts.js" defer></script>
+  <script src="~/node_modules/eruda/eruda.js"></script>
+  <script>eruda.init();</script>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -37,6 +39,7 @@
   <label for="email">
   <input id="email" class="inputs" name="SignupForm" placeholder="Email Address"> <!--3-->
   <p class="error">Email Address cannot be empty</p>
+  </label>
 	  <label for="password">
   <input id="password" class="inputs" name="SignupForm" placeholder="Password"> <!--4-->
   <p class="error">Password cannot be empty.</p>
